# portfolio

./: .gitignore  01_dabest.html  02_ethomics.html  03_itc.html  04_llm_evals.html  CNAME  README.md  art.html  cv.html  dabest.html  dabest_demo.html  genetic-tools.html  index.html  neuroscience.html  pyproject.toml  research.html  robots.txt  search.json  settings.ini  setup.py  sitemap.xml  statistics.html  styles.css
.github/workflows/: deploy.yaml
blog/: 01_dabest.html  02_ethomics.html  03_itc.html  04_llm_evals.html  05_delta_delta_same_estimate_different_uncertainty.html  index.html
nbs/: 00_core.ipynb  01_dabest.ipynb  01_dabest.qmd  02_ethomics.ipynb  02_ethomics.qmd  03_itc.qmd  04_llm_evals.ipynb  04_llm_evals.qmd  _quarto.yml  art.qmd  cv.qmd  dabest.qmd  dabest_demo.ipynb  genetic-tools.qmd  index.ipynb  nbdev.yml  neuroscience.qmd  research.qmd  research.txt  sidebar.yml  statistics.qmd  styles.css
nbs/_freeze/00_core/execute-results/: html.json  md.json
nbs/_freeze/01_dabest/execute-results/: md.json
nbs/blog/: 01_dabest.qmd  02_ethomics.ipynb  02_ethomics.qmd  03_itc.qmd  04_llm_evals.qmd  05_delta_delta_same_estimate_different_uncertainty.ipynb  index.qmd  same_estimate_different_uncertainty_colab.ipynb
nbs/blog/potential ideas/: 02_ethomics_draft.md  blog_post_agentic_measurement.md  reasoning_rubrics_llm_scientific_writing.md
portfolio/: _modidx.py  core.py
site_libs/bootstrap/: bootstrap-9502dc4c26c71327a14f8949f9a947c7.min.css  bootstrap-9b1188869ca3851c5a62a4fe00dfdbf4.min.css
tasks/: artasks.txt
(+4 files in other folders)
